# rainbow-six-siege-weapon-statistics

./: .gitignore  R6S-Weapon-Statistics.csv  R6S-Weapon-Statistics.xlsx  README.md  Rainbow-Six-Siege-Weapon-Statistics.html  Rainbow-Six-Siege-Weapon-Statistics.xlsx  all weapon names.xlsx  attachment_overview.json  attachments.json  create_weapon_statistics_file.py  crop_videos.py  damage drops.txt  extrapolate_first_5_meters.py  extrapolate_original_data.py  generate_weapon_statistics_file.py  generate_weapon_stats_file.py  measure_ads_time.py  measure_reload_time.py  measure_weapon_stats.py  merge_data.py  merged.csv  operator_weapons.csv  operator_weapons.json  operators.json  pyproject.toml  rainbow-six-siege-weapon-statistics.html  rainbow-six-siege-weapon-statistics.xlsx  requirements.txt  streamlit_app.py  test.py  update_reload_times.py  weapon_ads_times.json  weapon_firerates.csv  weapon_firerates.json  weapon_names.csv  weapon_names.json  weapon_pellet_counts.json  weapon_reload_times.json  weapon_types.csv  weapon_types.json
_weapons/: .44 Mag Semi-Auto.json  1911 TACOPS.json  416-C CARBINE.json  ACS12.json  AK-12.json  ARX200.json  C8-SFW.json  CAMRS.json  COMMANDO 9.json  F90.json  ITA12S.json  L85A2.json  M590A1.json  MP5K.json  MPX.json  Mk 14 EBR.json  Mx4 Storm.json  OTs-03.json  P-10C.json  P229.json  PMM.json  SASG-12.json  SIX12.json  SKELETON KEY.json  SMG-12.json  SUPER 90.json  UMP45.json  _GONNE-6.json
damage_data/: .44 Mag Semi-Auto.json  1911 TACOPS.json  416-C CARBINE.json  417.csv  417.json  5.7 USG.json  552 COMMANDO.json  556XI.json  (+148 more)
(+609 files in other folders)
