[project]
name = "rainbow-six-siege-weapon-statistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.1.0",
    "colorlog>=6.10.1",
    "dataclasses-json>=0.6.7",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
]
